[package]
name = "divvun-pipeline"
version = "0.1.0"
authors = ["Eike Siewertsen <eike@technocreatives.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.5.1"
memmap = "0.7.0"
log = "0.4.6"
env_logger = "0.6.2"
capnp = "0.10.0"
divvun-schema = { path = "../divvun-schema" }
tempfile = "3.1.0"
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }
runtime = "=0.3.0-alpha.6"
serde = { version = "=1.0.91", features = ["derive", "rc"] }
serde_json = "=1.0.40"
hashbrown = "=0.5.0"
