[package]
name = "concat-strings"
version = "0.1.0"
authors = ["Eike Siewertsen <eike@technocreatives.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
capnp = "0.10.0"
divvun-schema = { path = "../../divvun-schema" }
lazy_static = "1.3.0"

[build-dependencies]
capnpc = "0.10.0"
