[package]
name = "divvun-pipeline-hfst"
version = "0.1.0"
authors = ["Eike Siewertsen <eike@technocreatives.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
capnp = "0.10.1"
divvun-schema = { path = "../../divvun-schema" }
lazy_static = "1.3.0"

[build-dependencies]
cc = "1.0.40"
bindgen = "0.51.0"
